# llamadart-native

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/actions/checkout-llama-ref/: action.yml
.github/workflows/: auto_native_release.yml  native_release.yml  sync_llamadart_hook.yml
cmake/: windows-host-x64-toolchain.cmake
docs/: platform_backend_strategy.md
native/: CMakeLists.txt  build_android.sh  build_apple.sh  build_linux.sh  build_windows.ps1
scripts/: generate_assets_manifest.sh  update_llamadart_hook.sh
src/: llama_dart_wrapper.cpp  llama_dart_wrapper.h
tools/: build.py  docker_build_linux.sh
tools/docker/: linux-builder.Dockerfile  ubuntu.sources
